objects/SFMC_Bounce__c/SFMC_Bounce__c.object-meta.xml
<CustomObject>
    <label>Bounce (SFMC)</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bounces (SFMC)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>