objects/SFMC_Bounce__c/fields/Bounce_Category__c.field-meta.xml
<CustomField>
    <fullName>Bounce_Category__c</fullName>
    <label>Bounce Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>