objects/SFMC_Bounce__c/fields/Is_Unique__c.field-meta.xml
<CustomField>
    <fullName>Is_Unique__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Unique</label>
    <type>Checkbox</type>
</CustomField>