objects/SFMC_Bounce__c/fields/Journey__c.field-meta.xml
<CustomField>
    <fullName>Journey__c</fullName>
    <label>Journey (SFMC)</label>
    <referenceTo>SFMC_Journey__c</referenceTo>
    <relationshipLabel>Bounces (SFMC)</relationshipLabel>
    <relationshipName>Bounces_SFMC</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>