objects/SFMC_Bounce__c/fields/SMTP_Bounce_Reason__c.field-meta.xml
<CustomField>
    <fullName>SMTP_Bounce_Reason__c</fullName>
    <label>SMTP Bounce Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>